--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "html-react-parser": "^5.2.15",
     "input-otp": "^1.4.2",
     "kbar": "^0.1.0-beta.48",
     "lowlight": "^3.3.0",
